
LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../mia/core)
LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../mia/2d)
LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../mia/3d)


#basic helpers 
DEFEXE(filenumberpattern  miacore )

#2D programs 
DEFEXE(2dimagefilter      mia2d )
DEFEXE(2dcost             mia2d )
DEFEXE(multihist          mia2d )
DEFEXE(2dimagestats       mia2d )
DEFEXE(2dimagefilterstack mia2d )
DEFEXE(2dimagecreator     mia2d )
DEFEXE(raw2image          mia2d )
DEFEXE(2ddeform           mia2d )
DEFEXE(2dforce            mia2d )
DEFEXE(2davgmasked        mia2d )
DEFEXE(2drigidreg         mia2d )
DEFEXE(2dnonrigidreg      mia2d )
DEFEXE(2dmultiimagevar    mia2d )
DEFEXE(2dmulti-force      mia2d )
DEFEXE(2dimagefullstats mia2d )

DEFCHKEXE(2dlerp mia2d )


#Programs related to 2D myocardic perfusion 
IF(XMLPP_FOUND) 
  DEFCHKEXE(2dsegshift          mia2dmyocardperf )
  DEFEXE(2dsegshiftperslice     mia2dmyocardperf )
  DEFEXE(2dsegseriesstats       mia2dmyocardperf )
  DEFEXE(2dseries2dordermedian  mia2dmyocardperf )
  DEFEXE(2dmyoserial-nonrigid   mia2dmyocardperf )
  DEFEXE(2dmyoperiodic-nonrigid mia2dmyocardperf )
  DEFEXE(2dseriescorr           mia2dmyocardperf )
  DEFEXE(2dseriesgradvariation  mia2dmyocardperf )
  DEFEXE(2dseriesgradMAD        mia2dmyocardperf )
  DEFEXE(2dseriessmoothgradMAD  mia2dmyocardperf )
  DEFEXE(2dsegmentcropbox       mia2dmyocardperf )
  DEFEXE(2dseghausdorff         mia2dmyocardperf )
  DEFEXE(2dsegcompare           mia2dmyocardperf )
  DEFEXE(2dgroundtruthreg       mia2dmyocardperf )
  DEFEXE(2dseries2sets          mia2dmyocardperf )
  DEFEXE(2dseries-mincorr       mia2dmyocardperf )
  DEFEXE(2dmyopgt-nonrigid      mia2dmyocardperf )
  IF(ITPP_FOUND) 
    DEFEXE(2dmyomilles            mia2dmyocardperf )
    DEFEXE(2dmyocard-ica          mia2dmyocardperf )
    DEFEXE(2dmyocard-icaseries    mia2dmyocardperf )
    DEFEXE(2dmyoica-nonrigid      mia2dmyocardperf )
    DEFEXE(2dmyoica-nonrigid2     mia2dmyocardperf )
  ENDIF(ITPP_FOUND)
ENDIF(XMLPP_FOUND) 

DEFCHKEXE(3dlerp mia3d )

DEFEXE(3dimagestats       mia3d )
DEFEXE(3dcost             mia3d )
DEFEXE(3dimagefilter      mia3d )
DEFEXE(3dimagecombine     mia3d )
DEFEXE(3dimagecreator     mia3d )
DEFEXE(raw2volume         mia3d )
DEFEXE(3dnrreg            mia3d )
DEFEXE(3ddeform           mia3d )
DEFEXE(3dforce            mia3d )
DEFEXE(3dfuzzysegment     mia3d )
DEFEXE(3dgetslice         mia3d )
DEFEXE(3dgetsize          mia3d )
DEFEXE(2dto3dimage        mia3d )
DEFEXE(2dto3dimageb       mia3d )
DEFEXE(3drigidreg         mia3d )
DEFEXE(3dnonrigidreg      mia3d )
DEFEXE(2dstackfilter      mia3d )
DEFEXE(3dtransform        mia3d )
DEFEXE(3dmaskseeded       mia3d )
DEFEXE(3dfield2norm       mia3d )
DEFEXE(3dimageselect      mia3d )
DEFEXE(3dbrainextractT1   mia3d )
DEFEXE(3dimageaddattributes  mia3d )
DEFEXE(3dvectorfieldcreate  mia3d )


ADD_SUBDIRECTORY(fluid2d  )
ADD_SUBDIRECTORY(fluid3d  )